# wsi-tile-cleanup

./: .gitignore  README.md  examples.py  pyproject.toml  requirements.txt
data/images/wsi/: link-to-svs.txt
examples/images/wsi/: how-to.txt
wsi_tile_cleanup/: __init__.py
wsi_tile_cleanup/filters/: __init__.py  blackish.py  otsu.py  pens.py
wsi_tile_cleanup/masks/: blackish.py  otsu.py
wsi_tile_cleanup/utils/: __init__.py  pyvips.py
