[tool.poetry]
name = "wsi-tile-cleanup"
version = "0.1.0"
description = "Simple library for detecting gibberish tiles from histopathological whole-slide images (WSI)"
authors = ["Lucas Amaro <lucasrla@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/lucasrla/wsi-tile-cleanup"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
pyvips = "^2.1.12"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
